--- a/app/views/demo/index.html.erb
+++ b/app/views/demo/index.html.erb
@@ -3,7 +3,7 @@
 
 <a href="/demo/hello">hemmo</a></br>
 <%= link_to('hello 2',{:action => 'hello'}) %></br>
-
+<%= link_to('about us',{:action => 'hello'}) %></br>
 
 <%= link_to('hello with para',{:action => 'hello',:page =>5 ,:id =>20}) %>
 </br>
